# learn-x

learn-docker/devcontainer/: .gitignore  README.md  docker-compose.yaml  tsconfig.json
learn-docker/devcontainer/.devcontainer/: devcontainer.json
learn-elixir/: .gitignore
learn-elixir/exercism/: ast_1.ex  behaviour_1.ex  bitstring_1.ex  comprehension_1.ex  comprehension_2.ex  comprehension_3.ex  constants_1.ex  datetime_1.ex  enum_1.ex  exception_1.ex  file_1.ex  matching_1.ex  process_1.ex  process_2.ex  protocol_1.ex  protocol_2.ex  regex_1.ex  regex_2.ex  regex_3.ex  regex_4.ex  stdlib_1.ex  stream_1.ex  struct_1.ex
learn-elixir/official_guides/: README.md  mix.exs
learn-haskell/haskell-programming/: .gitignore  Ch06_EqInstances.hs  Ch07_Exercises.hs  Ch08_Recursion.hs  Ch08_WordNumber.hs  Ch09_Cipher.hs  Ch09_EFT.hs  Ch09_Exercises.hs  Ch09_FearfulSymmetry.hs  Ch09_Zipping.hs  Ch10_DatabaseProcessing.hs  Ch10_Exercises.hs  Ch10_Fibs.hs  Ch11_BinaryTree.hs  Ch11_Exercises.hs  Ch11_HuttonRazor.hs  Ch11_LogicGoats.hs  Ch11_Phone.hs  Ch11_Programmers.hs  Ch11_Vehicles.hs  Ch11_Vigenère.hs  Ch12_Exercises.hs  Ch13_Exercises.hs  Ch15_Exercises.hs  Ch15_Madlib.hs  Ch15_MonoidProperty.hs  Ch15_Optional.hs  Ch16_Exercises.hs  Ch16_FunctorProperty.hs  Ch16_ReplaceExperiment.hs  Ch20_Exercises.hs  Ch20_LibraryFunctions.hs  Ch22_ReaderPractice.hs  Ch23_Exercises.hs  Ch23_RollYourOwn.hs  Ch23_StateInstance.hs  Ch24_AltParsing.hs  Ch24_Fractions.hs  Ch24_Ini.hs  Ch24_LearnParsers.hs  (+15 more)
learn-haskell/haskell-programming/ch13-hangman/: Main.hs  ch13-hangman.cabal
learn-haskell/haskell-programming/ch13-hangman/src/: Hangman.hs
learn-haskell/haskell-programming/ch13-hangman/test/: Test.hs
learn-haskell/haskell-programming/ch14-morse/: ch14-morse.cabal
learn-haskell/haskell-programming/ch14-morse/lib/: Morse.hs
learn-haskell/haskell-programming/ch14-morse/src/: Main.hs
learn-haskell/haskell-programming/ch14-morse/tests/: Tests.hs
learn-haskell/haskell-programming/ch17-applicative/: ch17-applicative.cabal  stack.yaml
learn-haskell/haskell-programming/ch17-applicative/src/: ApplicativeInstances.hs  BadMonoid.hs  ZipList.hs
learn-haskell/haskell-programming/ch17-applicative/src/Exercises/: Combinations.hs  Instances.hs
learn-haskell/haskell-programming/ch18-monad/: ch18-monad.cabal
learn-haskell/haskell-programming/ch18-monad/src/: MonadInstances.hs  Sum.hs
learn-haskell/haskell-programming/ch21-traversable/: ch21-traversable.cabal
learn-haskell/haskell-programming/ch21-traversable/src/: SkiFree.hs  TraversableInstances.hs
learn-k6/get-started/: README.md  package.json
learn-k8s/node-redis/: Makefile  README.md
learn-nodejs/nestjs-typeorm-mongodb/: README.md  docker-compose.yaml  global.d.ts  insomnia-schema.yaml  package.json  tsconfig.json
learn-nodejs/nx-typescript-lambda/: .gitignore  README.md  insomnia-schema.yaml  nx.json  package.json  tsconfig.base.json  tsconfig.json
learn-nodejs/typeorm-type-graphql/: .eslintrc  .gitignore  README.md  docker-compose.yml  package.json
learn-python/: .gitignore  README.md
learn-python/django4.2/: .env  Pipfile  README.md  docker-compose.yaml  setup.cfg
learn-python/djangorestframework/: README.md
learn-python/fastapi/: README.md  main.py  setup.cfg
learn-python/rabbitmq-pika/: Pipfile  README.md  docker-compose.yaml
learn-react/redux-saga-firebase/: README.md
learn-react/xstate-tailwind/: .gitignore  .prettierignore  .prettierrc  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
(+246 files in other folders)
