name:                ch13-hangman
version:             0.1.0.0
synopsis:            Playing Hangman
author:              Krikchai Pongtaveewould
maintainer:          krikchai.p@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

library
  exposed-modules:     Hangman
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

executable hangman
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ch13-hangman

test-suite hangman-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , ch13-hangman
