name:              ch14-morse
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

library
  exposed-modules:      Morse
  -- other-modules:        ...
  build-depends:        base
                      , containers
                      -- , QuickCheck
  hs-source-dirs:       lib
  ghc-options:          -Wall -Wtabs

executable morse
  main-is:              Main.hs
  build-depends:        base
                      , ch14-morse
                      -- , containers
                      -- , QuickCheck
  hs-source-dirs:       src
  -- ghc-options:          -Wall -Wtabs

test-suite morse-tests
  type:                 exitcode-stdio-1.0
  main-is:              Tests.hs
  build-depends:        base
                      , ch14-morse
                      , containers
                      , QuickCheck
  hs-source-dirs:       tests
  -- ghc-options:          -Wall -Wno-orphans
