name:                   ch17-applicative
version:                0.0.0
build-type:             Simple
cabal-version:          >= 1.8

executable ch17-applicative
  main-is:              Main.hs
  other-modules:        BadMonoid
                      , ApplicativeInstances
                      , ZipList
                      , Exercises.Instances
                      , Exercises.Combinations
  hs-source-dirs:       .
                      , src
  build-depends:        base
                      , QuickCheck
                      , checkers
