name:                   ch21-traversable
version:                0.0.0
build-type:             Simple
cabal-version:          >= 1.8

library
  exposed-modules:      TraversableInstances
                      , SkiFree
  hs-source-dirs:       src
  build-depends:        base
                      , QuickCheck
                      , checkers
